[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "aiotnse"
dependencies = [
    "aiohttp"
]
dynamic = ["version"]
description = "Asynchronous Python API For TNS-Energo"
readme = "README.md"
requires-python = ">=3.9.0"
keywords = [
    "tns-energo",
    "energy",
    "electricity"
]
license = { text = "MIT License" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]

[project.urls]
Home = "https://github.com/lizardsystems/aiotnse"
Repository = "https://github.com/lizardsystems/aiotnse"
Documentation = "https://github.com/lizardsystems/aiotnse"
"Bug Tracker" = "https://github.com/lizardsystems/aiotnse/issues"
Changelog = "https://github.com/lizardsystems/aiotnse/blob/master/CHANGELOG.md"

[[project.authors]]
name = "LizardSystems"

[tool.setuptools_scm]
write_to = "aiotnse/_version.py"
local_scheme = "no-local-version"
version_scheme = "post-release"

[tool.setuptools]
platforms = ["any"]
include-package-data = true
package-data = {"aiotnse" = ["py.typed"]}

[project.scripts]
aiotaipit = "aiotnse.__main__:main"

[tool.setuptools.packages.find]
include = ["aiotnse*"]
