[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "aiotnse"
version = "2.0.1"
description = "Asynchronous Python API for TNS-Energo"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
keywords = [
    "electricity",
    "energy",
    "home-assistant",
    "tns-energo",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Home Automation",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3",
]

[[project.authors]]
name = "LizardSystems"

[project.urls]
Repository = "https://github.com/lizardsystems/aiotnse"
Documentation = "https://github.com/lizardsystems/aiotnse"
"Bug Tracker" = "https://github.com/lizardsystems/aiotnse/issues"
Changelog = "https://github.com/lizardsystems/aiotnse/blob/main/CHANGELOG.md"

[project.scripts]
aiotnse-cli = "aiotnse.__main__:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "aioresponses",
]

[tool.setuptools]
include-package-data = true
package-data = {"aiotnse" = ["py.typed"]}

[tool.setuptools.packages.find]
include = ["aiotnse*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
